--- a/DXMB.html
+++ b/DXMB.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="1800"></object>
+            <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="1100"></object>
         </div>
         <div id="address">
             <a href="./index.html" style="font-size: 3em;float:left">主页</a>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <hr>
-        <div class="div_a" style="width: 1600;">
+        <div class="div_a" style="width: 1080;">
             <div style="width:500;height:297" class="border_div">
                 <a href="https://www.pku.edu.cn/" target="_blank" class="center">
                     <h2>北京大学</h2>
@@ -158,6 +158,8 @@
                 </a>
             </div>
         </div>
-        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="100%" height="40px"></object>
+        <div style="background-color:#DCDCDC;height: 40;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+        </div>
     </body>
 </html>
