--- a/WZDH.html
+++ b/WZDH.html
@@ -15,7 +15,7 @@
     </head>
     <body>
       <div class="center">
-        <div id="header" style="background-color:#DCDCDC;height:82;width: 1800;" class="center">
+        <div id="header" style="background-color:#DCDCDC;height:82;width: 1100;" class="center">
           <div id="menu" style="width:82px;height:82px;float:left;">
             <a href="index.html">
               <img src="images/2024547.jpg" style="width:82px;height:82px;">
@@ -27,6 +27,8 @@
       </div>
       </div>
         <p>building...</p>
-        <object style="border:0px" type="text/x-scriptlet" data="./foot.html" width="100%" height="40px"></object>
+        <div style="background-color:#DCDCDC;height: 40;" class="center">
+          <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+      </div>
     </body>
 </html>
