--- a/ZMYH.html
+++ b/ZMYH.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" async href="style.css">
     </head>
     <body>
-    <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="1800"></object>
-    </div>
+        <div style="background-color:#DCDCDC;height: 122;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="1100"></object>
+        </div>
     <div id="address">
         <a href="index.html" style="font-size: 3em;float:left">主页</a>
         <a style="font-size: 3em;float:left" class="dis_a">>载梦远航</a>
@@ -45,7 +45,9 @@
             </div>
         </div>
     </div>
-        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="100%" height="40px"></object>
+    <div style="background-color:#DCDCDC;height: 40;" class="center">
+        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+    </div>
     </body>
 </html>
         
