--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
-            <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="1800"></object>
+            <object style="border:0px" type="text/x-scriptlet" data="hear.html" width="1100"></object>
         </div>
         <div id="address">
             <a href="./index.html" style="font-size: 3em;float:left">主页</a>
@@ -25,6 +25,8 @@
         <div style="width: 100%;height: 60;"></div>
         <hr>
         <P>QQ：2946983031</p>
-        <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="100%" height="40px"></object>
+        <div style="background-color:#DCDCDC;height: 40;" class="center">
+            <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
+        </div>
     </body>
 </html>
