--- a/foot.html
+++ b/foot.html
@@ -33,7 +33,7 @@
             <p style="float: left;font-size: 30;">547web</p>
         </div>
         <div style="float: left;width: 40%;background-color:#DCDCDC;" class="center">
-            <p>made with Github Page</p>
+            <a href="https://pages.github.com/" target="_blank"><p style="color: #000;text-decoration: none;">made withGithub Page</p></a>
             <p>since 2024.10.1</p>
         </div>
         <div style="float: left;width: 40%;background-color:#DCDCDC;" class="center">
