--- a/hear.html
+++ b/hear.html
@@ -9,7 +9,7 @@
       </a>
     </div>
     <div style="height:82px;float:left;"> 
-      <h1>隆安中学高547班官网</h1> 
+      <h1 style="font-size: 40px;margin-block-start: 11px;margin-block-end: 21px;">隆安中学高547班官网</h1> 
     </div>
 </div>
 <ul style="height: 40;">
