--- a/cdqz/song.html
+++ b/cdqz/song.html
@@ -33,6 +33,7 @@
                 <div style="width: 100%;height: 90;"></div>
                 <hr>
                 <div class="div_a">
+                    <a href="https://wwqb.lanzout.com/b00ocmnbmb" target="_blank">2014校运会会歌《追梦》下载 密码:0000</a>
                     <div class="border_div" style="width: 780;height: 620;" id="pc">
                         <div style="width: 480;height: 610;float: left;">
                             <div style="height: 10;"></div>
