--- a/about.html
+++ b/about.html
@@ -13,6 +13,11 @@
   
         <link rel="icon" href="2024547.ico" type="image/x-icon">
         <link rel="stylesheet" async href="./style.css">
+        <style>
+            .aa{
+                border:1px solid #000;
+            }
+        </style>
     </head>
     <body>
         <div style="background-color:#DCDCDC;height: 122;" class="center">
@@ -31,6 +36,19 @@
                     <h2>547班学生名单</h2>
                 </div>
             </a>
+            <div style="border:1px solid #000;max-width: 750;min-width: 500;margin: 0 auto;">
+                <h2>链接</h2>
+                <div class="center">
+                    <a href="https://afraidskydream.github.io/" class="aa" target="_blank">尸田</a>
+                    <a href="http://winmchg31400.github.io/tools" class="aa" target="_blank">winMCHG31400</a>
+                    <a href="https://www.cdqz.net/" class="aa" target="_blank">成都七中官网</a>
+                    <a href="https://www.cdqz.net/html/cdqz/html/list.html?menuId=c1b22f946fd447eebd6c3c4b37ba99e5" class="aa" target="_blank">成都七中教育集团</a>
+                    <a href="http://www.eastedu.org/" class="aa" target="_blank">东方闻道网校</a>
+                    <a href="https://appqh86kyei8740.pc.xiaoe-tech.com/" class="aa" target="_blank">郡园学堂</a>
+                    <a href="https://mindustrygame.github.io/" class="aa" target="_blank">Mindustry</a>
+                    <a href="https://github.com/lazx547/lazx547.github.io" class="aa" target="_blank">源代码</a>
+                  </div>
+            </div>
         </div>
         <div style="background-color:#DCDCDC;height: 40;" class="center">
             <object style="border:0px" type="text/x-scriptlet" data="foot.html" width="1100" height="40" style="overflow: hidden;"></object>
