--- a/hear.html
+++ b/hear.html
@@ -31,6 +31,12 @@
         <img src="images/cloudflare.png" style="width:40px;height:40px;">
       </a>
     </div>
+    <div style="float:right;width: 40;height: 40;"></div>
+    <div style="float:right;width: 40;height: 40;border-radius: 5%;" class="img_a">
+      <a href="dark/index.html" target="_top">
+        <img src="images/light.png" style="width:40px;height:40px;">
+      </a>
+    </div>
   </div>
   <hr style="border-width:0;color:#999999;background-color:#999999;margin-block-start: 0;margin-block-end: 0;height: 2;">
 <ul style="height: 40;">
