--- a/dark/about.html
+++ b/dark/about.html
@@ -11,7 +11,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://lazx547.us.kg" />
   
-        <link rel="icon" href="2024547.ico" type="image/x-icon">
+        <link rel="icon" href="../2024547.ico" type="image/x-icon">
         <link rel="stylesheet" async href="style.css">
         <style>
             .aa{
