--- a/about.html
+++ b/about.html
@@ -54,16 +54,6 @@
                         <p>Github Page较稳定</p>
                     </div>
                     <div class="subd_a" style="width: 300;">
-                        <a href="https://lazx547.us.kg" target="_blank">
-                            <h2>us.kg域名</h2>
-                            <img src="images/us_kg.png" style="width:80px;height:80px;">
-                            <br>
-                            <p><u>lazx547.us.kg</u></p>
-                        </a>
-                        <p>这个链接指向的是Cloudflare的服务器</p>
-                        <p>us.kg域名有时无法解析</p>
-                    </div>
-                    <div class="subd_a" style="width: 300;">
                         <a href="https://lazxg547b.pages.dev/" target="_blank">
                             <h2>Cloudflare Page</h2>
                             <img src="images/cloudflare.png" style="width:80px;height:80px;">
@@ -84,6 +74,16 @@
                 <br style="clear: both;">
                 <div class="div_a">
                     <div class="subd_a" style="width: 300;">
+                        <h2>547DesktopToo</h2>
+                        <img src="images/547dt.png" style="width:80px;height:80px;">
+                        <p>547DesktopToo</p>
+                        <p>
+                            <a href="https://github.com/lazx547/547DesktopTool" target="_blank">查看源代码 </a>或
+                            <a href="https://github.com/lazx547/547DesktopTool/releases" target="_blank">下载</a>
+                        </p>
+                        
+                    </div>
+                    <div class="subd_a" style="width: 300;">
                         <h2>547clock</h2>
                         <img src="images/547clock.png" style="width:80px;height:80px;">
                         <p>754的小时钟</p>
@@ -102,15 +102,6 @@
                             <a href="https://github.com/lazx547/547choice/releases" target="_blank">下载</a>
                         </p>
                     </div>
-                    <div class="subd_a" style="width: 300;">
-                        <h2>547woodenfish</h2>
-                        <img src="images/547weendenfish.png" style="width:80px;height:80px;">
-                        <p>547的木鱼</p>
-                        <p>
-                            <a href="https://github.com/lazx547/547moodenfish" target="_blank">查看源代码 </a>或
-                            <a href="https://github.com/lazx547/547moodenfish/releases" target="_blank">下载</a>
-                        </p>
-                    </div>
                 </div>
                 <br style="height: 10;">
             </div>
@@ -122,6 +113,9 @@
                 <br style="clear: both;">
                 <a href="protect/student.html" target="_blank">
                     <h2>547班学生名单</h2>
+                </a>
+                <a href="protect/alls.html" target="_blank">
+                    <h2>隆安中学2024级学生名单</h2>
                 </a>
             </div>
             <br style="height: 20;">
